# quantum-trading-platform

./: .dockerignore  .editorconfig  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  PR_MESSAGE.md  README.md  TRADING_STRATEGY_SYSTEM_FLOW.md  backtest_minute_report.html  backtest_report.html  build.gradle.kts  capital_comparison_report.html  docker-compose.airflow.simple.yml  docker-compose.airflow.yml  docker-compose.dev.yml  docker-compose.yml  gradle.properties  insert_holiday_data.py  market_analysis_report.html  pyproject.toml  regime_strategy_report.html  settings.gradle.kts  strategy_comparison_report.html  test_dag_direct.py  test_holiday_dag.py  test_real_api.py
app/: config.py  (+4 more)
quantum-adapter-external/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
quantum-adapter-external/config/: settings.py
quantum-adapter-external/routers/: disclosure.py  health.py  news.py
quantum-adapter-external/src/common/: exceptions.py
quantum-adapter-external/src/dart/: __init__.py  disclosure_api.py  models.py
quantum-adapter-external/src/naver/: models.py  news_api.py
quantum-adapter-external/src/utils/: http_client.py
quantum-adapter-kis/: .gitignore  API_REFERENCE.md  CLAUDE.md  DEVELOPER_GUIDE.md  README.md  analyze_original_signals.py  backend_client.py  calculate_vwap_returns.py  compare_strategies.py  config.json  db_token_manager.py  debug_kis_finance_api.py  debug_vwap.py  domestic_realtime_trading_log.py  kis_auth.py  main.py  pyproject.toml  realtime_trading_log.py  test_comprehensive_dino.py  test_dino_material.py  test_enhanced_logging.py  test_technical_analysis.py  test_vwap_backtest.py  test_with_headers.http
quantum-adapter-kis/auto_trading_system/: README.md  __init__.py  main_app.py  simple_test.py
quantum-adapter-kis/auto_trading_system/config/: example_config.json
quantum-adapter-kis/auto_trading_system/core/: data_types.py  order_executor.py  position_manager.py  risk_manager.py  trading_engine.py
quantum-adapter-kis/auto_trading_system/monitors/: __init__.py  stock_monitor.py  terminal_manager.py
quantum-adapter-kis/auto_trading_system/strategies/: __init__.py  base_strategy.py  golden_cross_strategy.py  mean_reversion_strategy.py  rsi_strategy.py  volume_breakout_strategy.py
quantum-adapter-kis/dino_test/: __init__.py  ai_client.py  comprehensive_analyzer.py  disclosure_analyzer.py  event_analyzer.py  finance_data_collector.py  finance_scorer.py  interest_coverage_analyzer.py  material_analyzer.py  material_data_collector.py  news_analyzer.py  positive_news_analyzer.py  price_analyzer.py  price_data_collector.py  technical_analyzer.py  technical_data_collector.py  theme_analyzer.py
quantum-adapter-kis/docs/: NASMST.COD  kosdaq_code.txt
quantum-adapter-kis/docs/strategies/: vwap_technical_doc.md
quantum-adapter-kis/domestic_trading_system/: __init__.py
quantum-adapter-kis/domestic_trading_system/core/: __init__.py  domestic_data_types.py  domestic_order_executor.py  domestic_trading_engine.py  domestic_websocket_provider.py
quantum-adapter-kis/domestic_trading_system/strategies/: __init__.py  base_strategy.py  bollinger_strategy.py  moving_average_strategy.py  rsi_strategy.py
quantum-adapter-kis/examples_llm/: kis_auth.py  kis_auth_simple.py
quantum-adapter-kis/examples_user/: kis_auth.py
quantum-adapter-kis/logs/: .gitkeep  README.md
quantum-adapter-kis/overseas_trading_system/: main_overseas.py
quantum-adapter-kis/overseas_trading_system/config/: demo_config.json
quantum-adapter-kis/sector_trading_test/: README.md  manual_trader.py  test_system.py
quantum-adapter-kis/tests/: README.md
quantum-adapter-kis/trading_strategy/: INTEGRATION_GUIDE.md  README.md  WEB_UI_INTEGRATION_SPEC.md  __init__.py  comprehensive_batch_analyzer.py  db_manager.py  demo_integration_flow.py  demo_single_stock_analysis.py  main.py  requirements.txt  run_backtest.py  test_data_sources.py  test_optimized_system.py  test_run.py  test_vectorbt_performance.py
quantum-adapters/kiwoom-adapter/: ANALYSIS_SYSTEM_PLAN.md  CLAUDE.md  Google_Sheets_Analysis.md  Google_Sheets_Cell_Analysis.md  Google_Sheets_VLOOKUP_Formulas.md  Implementation_Plan.md  Kiwoom_API_Mapping.md  README.md  STOCK_ANALYSIS_SYSTEM_PLAN.md  TRADING_STRATEGY_PLAN.md  kiwoom_websocket_tr_client.py  pyproject.toml  requirements.txt  simple_test.py  test_dynamic_mode.py  test_indicators_only.py  test_java_auth_integration.py  test_kafka_consumer.py  test_pure_python.py  test_simple.py  test_stock_api.py  test_tr_integration.py  test_websocket.py
(+1320 files in other folders)
