[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kiwoom-api"
version = "0.1.0"
description = "Kiwoom Securities REST API Python Client"
authors = ["Quantum Trading Platform <quantum@trading.com>"]
readme = "README.md"
packages = [{include = "kiwoom_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
httpx = "^0.25.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
# Distributed Tracing
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
opentelemetry-exporter-otlp = "^1.21.0"
# Structured Logging
structlog = "^23.2.0"
# Kafka Client
aiokafka = "^0.8.11"
# Prometheus Metrics
prometheus-client = "^0.19.0"
prometheus-fastapi-instrumentator = "^6.1.0"

